tests/function/wrong_return_type.rz
fn add() -> int {
    return "foo" // error: wrong type returned, expected 'int' but found 'str'
}

fn add1() {
    return "foo" // error: wrong type returned, expected 'void' but found 'str'
}

fn add2() -> int {
     // error: not all code paths return a value of type 'int' in function 'add2'
}

fn add3(foo: float) -> bool {
    return foo // error: wrong type returned, expected 'bool' but found 'float'
}

var bar: bool
fn add4() -> str {
    return bar // error: wrong type returned, expected 'str' but found 'bool'
}

fn add5() -> void {} // should be ok, same as no return type